      thanks to Sebastian Mendel
    * Documentation.html: patch #1169308, FAQ 1.17a improved,
      thanks to Isaac Bennetch
    * queryframe.php, footer.inc.php, config.inc.php, Documentation.html,
      libraries/common.lib.php, /config_import.lib.php:
      patch #1246245, tree subgroups for databases (in selector),
      thanks to Edward Rudd - urkle

2005-08-02 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: patch #1249363, remove unneeded wordwrap(),
      table width should be limited by template if necessary,
      thanks to Sebastian Mendel - cybot_tm
    * server_databases.php: patch #1249371, correct calculation of colspan,
      and patch #1249414, display improvements, thanks to Sebastian Mendel;
      also,  $dbstats should contain 0 or 1, not the colspan
    * sql.php: patch #1249451, display improvement for bookmark dialog,
      thanks to Sebastian Mendel
    * libraries/common.lib.php: patch #1249457, display improvements for Edit
      Explain etc dialog, thanks to Sebastian Mendel

2005-08-01 Michal Čihař  <michal@cihar.com>
    * lang/czech: Fix bad translation (is was translated to is not :-)),
      update.

2005-08-01 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1249239, XSS vulnerability on Create page
    * Documentation.html: "bug #1248598, explain another cause of the Missing
      parameter error

2005-07-29 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php, lang/*: new message $strAndThen
	* libraries/dbg/profiling.php: patch #1160439, improvements,
	  thanks to Glen Arason
	* scripts/upgrade.pl: patch #1198492, current version check,
	  thanks to Herman van Rink - helmo

2005-07-28 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_pages.php: Go button renamed to Save because it's really used to save coordinates

2005-07-26 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php: bug #1243908, left panel browse icon alt tag not updated